# Bridge_QT

./: CMakeLists.txt  CMakeLists.txt.user.46ddc0f  CMakeLists.txt.user.7d77fb4  SettingMacros.h  appengine.cpp  appengine.h  cgameengine.cpp  cgameengine.h  client.h  cplayingcard.cpp  cplayingcard.h  main.cpp  main.qml  server.cpp  server.h  tgamelog.cpp  tgamelog.h
